// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe mostrar componente con la imagen del producto 1`] = `
<div
  className="productCard "
>
  <img
    alt="Product"
    className="productImg "
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage Debe mostrar el componente con la imagen personalizado 1`] = `
<img
  alt="Product"
  className="productImg "
  src="https://hello-world.jpg"
/>
`;
